--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,16 @@
-.header {
-    font-size: 64px;
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
+}
+
+.content {
+  max-width: 1125px;
+  width: 100%;
+  margin: 0 auto;
+  flex-grow: 1;
+  font-size: 64px;
 }
