--- a/src/components/Header/components/Navigation/Navigation.module.scss
+++ b/src/components/Header/components/Navigation/Navigation.module.scss
@@ -1,32 +1,41 @@
 .root {
   display: flex;
-  align-items: flex-start;
-  align-self: flex-start;
-  padding-top: 7px;
+  align-items: center;
+  max-width: 658px;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .item {
-  cursor: pointer;
-  padding: 16px 0;
-  margin-right: 50px;
-  font-family: Karla;
+  font-style: normal;
+  font-weight: normal;
   font-size: 25px;
-  line-height: 30px;
-}
+  line-height: 29px;
+  color: $dark;
+  text-decoration: none;
+  position: relative;
 
-.item:hover {
-  opacity: 0.7;
-}
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -8px;
+    height: 1px;
+    width: 1%;
+    background: $dark;
+    border: 1px solid $dark;
+    border-radius: 6px;
+    opacity: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    transition: opacity, width ease-in-out 0.25s;
+  }
 
-.item.active {
-  cursor: default;
-  border-bottom: 3px solid #212121;
-}
-
-.item.active:hover {
-  opacity: 1;
-}
-
-.item:last-child {
-  margin-right: 0;
+  &:hover,
+  &.activeLink {
+    &:after {
+      width: 100%;
+      opacity: 1;
+    }
+  }
 }
