--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -5,6 +5,8 @@
     font-size: 72px;
     line-height: 84px;
     letter-spacing: 4px;
+    margin: 0;
+    padding: 0;
   }
 
   &_level_2 {
@@ -12,6 +14,8 @@
     font-weight: normal;
     font-size: 32px;
     line-height: 37px;
+    margin: 0;
+    padding: 0;
   }
 
   &_level_3 {
@@ -19,6 +23,8 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 21px;
+    margin: 0;
+    padding: 0;
   }
 
   &_level_4 {
@@ -26,6 +32,8 @@
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
+    margin: 0;
+    padding: 0;
   }
 
   &_level_5 {
@@ -33,6 +41,8 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
+    margin: 0;
+    padding: 0;
   }
 
   &_level_6 {
@@ -40,5 +50,7 @@
     font-weight: normal;
     font-size: 12px;
     line-height: 14px;
+    margin: 0;
+    padding: 0;
   }
 }
