--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -3,14 +3,13 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
-  background: linear-gradient(180deg, $third 0%, $primary 100%);
   overflow: hidden;
 }
 
-.text {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 32px;
-  line-height: 37px;
-  margin-bottom: 64px;
+.content {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1125px;
+  margin: 50px auto 0;
 }
